--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "^12.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scroll": "^1.8.7",
+    "sass": "^1.54.4"
   },
   "devDependencies": {
     "eslint": "8.20.0",
